--- a/install_apache.yml
+++ b/install_apache.yml
@@ -4,36 +4,24 @@
   become: true
   tasks:
 
-  - name: Update repository index
+
+  - name: Install apache2 and php packages for Ubuntu
     apt:
+      name:
+        - apache2
+        - libapache2-mod-php
+      state: latest
       update_cache: yes
     when: ansible_distribution == "Ubuntu"
 
-  - name: Install apache2 package
-    apt:
-      name: apache2
-      state: latest
-    when: ansible_distribution == "Ubuntu"
 
-  - name: Add php support for apache
-    apt:
-      name: libapache2-mod-php
-      state: latest
-    when: ansible_distribution == "Ubuntu"
-
-  - name: Update repository index for CentOS
+  - name: Install apache and php for CentOS
     dnf:
+      name: 
+        - httpd
+        - php
+      state: latest
       update_cache: yes
     when: ansible_distribution == "CentOS"
 
-  - name: Install apache for CentOS
-    dnf:
-      name: httpd
-      state: latest
-    when: ansible_distribution == "CentOS"
 
-  - name: Add php support for Apache for CentOS
-    dnf:
-      name: php
-      state: latest
-    when: ansible_distribution == "CentOS"
